--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,11 @@
 *.war
 *.ear
 
+# eclipse & maven
+.classpath                                                                                                                                                                           
+.project
+.settings
+/target/
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
