--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,12 @@
 *.war
 *.ear
 
-# eclipse & maven
-.classpath                                                                                                                                                                           
-.project
-.settings
-/target/
-
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target/
 
+.project
+.settings
 .classpath
+
+.README.md.html 
