--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
+*.class
 .idea
 *.iml
-*.class
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -18,5 +18,9 @@ hs_err_pid*
 .settings
 .classpath
 
+.DS_Store
+
 .README.md.html
-.DS_Store 
+
+pom.xml.releaseBackup
+release.properties
