--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <properties>
         <jsr305.version>1.3.9</jsr305.version>
-        <guava.version>19.0</guava.version>
+        <guava.version>28.1-jre</guava.version>
 
         <junit.version>5.6.1</junit.version>
         <logback-classic.version>1.1.8</logback-classic.version>
